# astronomer-snowpatrol-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml
plugin/: __init__.py
tests/: __init__.py  test_plugin.py
